--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,12 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:24.1.0'
+    compile 'com.android.support:design:24.1.0'
     compile 'com.squareup.picasso:picasso:2.5.0'
 
     compile 'com.facebook.android:facebook-android-sdk:4.8.2'
     compile 'com.yalantis:contextmenu:1.0.7'
+    compile 'com.roughike:bottom-bar:1.2.1'
 }
