--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:label="@string/app_name" />
         <activity android:name=".activity.PostActivity"
             android:label="@string/app_name" />
+        <activity android:name=".activity.CreatePostActivity"
+            android:label="@string/app_name" />
+        <activity android:name=".activity.CreatePostNextActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
