--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:label="@string/app_name" />
         <activity android:name=".activity.CreatePostNextActivity"
             android:label="@string/app_name" />
-
+        <activity android:name=".activity.UserInfoActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
