--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.ocssd.diaryram"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -21,6 +21,9 @@ android {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://jitpack.io"
+    }
 }
 
 dependencies {
@@ -33,4 +36,6 @@ dependencies {
     compile 'com.yalantis:contextmenu:1.0.7'
     compile 'com.roughike:bottom-bar:1.2.1'
     compile 'info.hoang8f:fbutton:1.0.5'
+    compile 'com.github.fenjuly:ToggleExpandLayout:774e497692'
+    compile 'com.kyleduo.switchbutton:library:1.2.9'
 }
